<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello timer!</string>
    <string name="title">Voice Controlled Timer</string>
    <string name="app_name">vctimer</string>
    <string name="startTimer">Start</string>
    <string name="stopTimer">Stop</string>
    <string name="resetTimer">Reset</string>
    <string name="timerCounterHint">Enter time text</string>
    <string name="voiceControlsTitle">Voice Controls</string>
    <string name="listeningForCommands">Listening For commands</string>
    <string name="notListeningForCommands">Not listening for commands</string>
    <string name="soundRecorderTitle">Sound recorder</string>
    <string name="goToSoundRecorder">Go to sound recorder</string>
    <string name="recordStartSoundButton">Record start sound</string>
    <string name="playStartSoundButton">Play start sound</string>

</resources>