<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/soundRecorderTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundRecorderTitle" />

    <Button
        android:id="@+id/recordStartSoundButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/soundRecorderTitle"
        android:text="@string/recordStartSoundButton" />

    <Button
        android:id="@+id/playStartSoundButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recordStartSoundButton"
        android:text="@string/playStartSoundButton" />

</RelativeLayout>