<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:visibility="invisible" />

    <Button
        android:id="@+id/startTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/startTimer" />

    <Button
        android:id="@+id/stopTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toRightOf="@id/startTimerButton"
        android:text="@string/stopTimer"
        android:visibility="gone" />

    <Button
        android:id="@+id/resetTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toRightOf="@id/stopTimerButton"
        android:text="@string/resetTimer" />

    <TextView
        android:id="@+id/countdownTimerField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetTimerButton" />

    <SeekBar
        android:id="@+id/timerbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countdownTimerField"
        android:max="120" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerbar"
        android:visibility="gone" />

</RelativeLayout>